message InjectionPointMessage {
	required int32 injection_instr = 1;
}